# Strata

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  LICENSE.md  MONETIZATION.md  MVP.md  PRIVACY.md  PROVACY.md  README.md  ROADMAP.md  Strata-inplementation-specv1.md  VISION.md
.claude/: settings.json  settings.local.json.template
.claude/hooks/: post-edit.sh
.claude/skills/persona-architect/: SKILL.md
.claude/skills/persona-mcp-engineer/: SKILL.md
.claude/skills/persona-privacy-guardian/: SKILL.md
.claude/skills/persona-product-scout/: SKILL.md
.claude/skills/persona-quality-sentinel/: SKILL.md
.claude/skills/persona-rustacean/: SKILL.md
.claude/skills/privacy-review/: SKILL.md
.github/workflows/: ci.yml
docs/: client-rules.md
docs/adr/: 0001-use-rust-for-core.md  0002-sqlite-skill-graph.md  0003-mcp-stdio-transport.md  0004-ai-as-taxonomizer.md  0005-derived-friction-signals.md  0006-transcript-backfill-and-hooks.md  0007-preference-write-path-and-context-briefing.md  0008-session-mechanics-metrics.md  README.md
src/: lib.rs  main.rs  paths.rs  private_mode.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  integrations.rs  lib.rs  main.rs
src/backfill/: mod.rs
src/consent/: mod.rs
src/graph/: insights.rs  mod.rs  queries.rs  schema.rs
src/server/: mod.rs  router.rs
src/signals/: mod.rs
src/tools/: mod.rs
tests/integration/: main.rs  mcp_roundtrip.rs
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css  ipc.ts  main.tsx  types.ts
ui/src/components/: ConsentControls.tsx  GrowthTimeline.tsx  SetupPanel.tsx  SkillMap.tsx
ui/src/components/__tests__/: ConsentControls.test.tsx  SetupPanel.test.tsx  SkillMap.test.tsx
