[package]
name = "strata"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Privacy-first local skill graph for AI workflows — MCP server in Rust"
repository = "https://github.com/zacwilson87/strata"
keywords = ["mcp", "ai", "privacy", "skills", "local-first"]
categories = ["development-tools"]

[lib]
name = "strata"
path = "src/lib.rs"

[[bin]]
name = "strata"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
